--- a/qrcode-viewer/pom.xml
+++ b/qrcode-viewer/pom.xml
@@ -11,7 +11,7 @@
   <parent>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-parent</artifactId>
-      <version>1.3.8.RELEASE</version>
+      <version>2.7.7</version>
   </parent>
 
   <dependencies>
@@ -33,6 +33,10 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
