fix to execute in tomcat container

--- a/qrcode-viewer/pom.xml
+++ b/qrcode-viewer/pom.xml
@@ -74,4 +74,8 @@
   <properties>
       <java.version>1.8</java.version>
   </properties>
+
+  <build>
+    <finalName>${artifactId}</finalName>
+  </build>
 </project>
